--- a/main.html
+++ b/main.html
@@ -119,10 +119,8 @@
       timeToDisplay = timeToDisplay;
       return timeToDisplay;
     }
-
-
-    
-  </script>load
+  </script>
+	
   <div id="banner" class="container sticky-top" style="height:35px; margin:2px">
     <div class="row" >
       <div style="border-style: none; border-radius: 5px; background-color:rgb(100, 146, 225)" class="text-center col-10 bg-body-secondary">
