--- a/main.html
+++ b/main.html
@@ -1,11 +1,14 @@
 <html>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-<body id="banner">
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="https://apis.google.com/js/api.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>sns-yt-comments</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  </head>
+
+ 
+  <body id="banner">
+
   <script>
     
     // Make sure the client is loaded before calling this method.
@@ -28,6 +31,7 @@
               let mainSnSdiv = document.getElementById(divId);
                   mainSnSdiv.innerHTML = "";
                   mainSnSdiv.scrollTop = 0;
+
                   // Handle the results here (response.result has the parsed body).
                   console.log(res["items"])
                   res["items"].forEach(element => {
@@ -38,6 +42,7 @@
                     /* title row div */
                     let titleDiv = document.createElement("div");
                     titleDiv.classList.add("row", "border", "text-wrap");
+
                     /* title content div */
                     let videoID = element["snippet"]["topLevelComment"]["snippet"]["videoId"];
                     console.log(videoID)
@@ -79,8 +84,6 @@
                     dateDiv.innerHTML = textToDisplay ;
                   });
                 }
-                
-
     }
 
     /* ------------ */
@@ -121,17 +124,16 @@
     }
   </script>
 	
-  <div id="banner" class="container sticky-top" style="height:35px; margin:2px">
+
+
+  
+  <div id="banner" class="container sticky-top" style="height:45px">
     <div class="row" >
       <div style="border-style: none; border-radius: 5px; background-color:rgb(100, 146, 225)" class="text-center col-10 bg-body-secondary">
         <strong>SnS Youtube - Ultimi commenti</strong>
       </div>
       <button style="padding:0px" onclick="execute()" type="button" class="bg-warning col-2 btn btn-sm btn-link">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-repeat" viewBox="0 0 16 16">
-<path d="M11.534 7h3.932a.25.25 0 0 1 .192.41l-1.966 2.36a.25.25 0 0 1-.384 0l-1.966-2.36a.25.25 0 0 1 .192-.41zm-11 2h3.932a.25.25 0 0 0 .192-.41L2.692 6.23a.25.25 0 0 0-.384 0L.342 8.59A.25.25 0 0 0 .534 9z"></path>
-<path fill-rule="evenodd" d="M8 3c-1.552 0-2.94.707-3.857 1.818a.5.5 0 1 1-.771-.636A6.002 6.002 0 0 1 13.917 7H12.9A5.002 5.002 0 0 0 8 3zM3.1 9a5.002 5.002 0 0 0 8.757 2.182.5.5 0 1 1 .771.636A6.002 6.002 0 0 1 2.083 9H3.1z"></path>
-</svg>
-        <span class="visually-hidden"></span>
+Aggiorna
       </button>
   </div>
 </div>
@@ -171,8 +173,7 @@
 <!-- Bootstrap core JavaScript
     ================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-  </div>
+ </div>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
