--- a/main.html
+++ b/main.html
@@ -69,7 +69,6 @@
           commentDiv.innerHTML = comment + "<br>"; 
           commentRow.appendChild(commentDiv)
           cdiv.appendChild(commentRow)
-          // repliesText + linkToVideo;
 
           /* footer row */
           let footerRow = document.createElement("div");
@@ -77,7 +76,7 @@
           let footerDiv = document.createElement("div");
           footerDiv.classList.add("col-12", "text-wrap");
           let videoID = element["snippet"]["topLevelComment"]["snippet"]["videoId"];
-          let linkToVideo = "<a href='https://www.youtube.com/watch?v=" + videoID + "' target=_blank>Apri in YT</a> - <a href='#banner'><i class='bi bi-arrow-up'></i><a>";
+          let linkToVideo = "<a href='https://www.youtube.com/watch?v=" + videoID + "' target=_blank>Apri in YT</a> - <a href='#banner'>Torna su<a>";
           let replies = element["snippet"]["totalReplyCount"];
           let repliesText = "<strong>Risposte:</strong> " + replies + " - " + linkToVideo
           footerDiv.innerHTML = repliesText
@@ -85,13 +84,8 @@
           footerRow.appendChild(footerDiv)
           cdiv.appendChild(footerRow)
 
-
           let titleContentDiv = document.createElement("div");
           titleContentDiv.classList.add("col-12");
-          
-          //titleDiv.appendChild(titleContentDiv);
-          //cdiv.appendChild(titleDiv);
-
 
           cdiv.scrollTop = 0;
           mainSnSdiv.appendChild(cdiv);
@@ -139,7 +133,7 @@
   </script>
 
   <!-- Tab content -->
-  <div id="exTab1" class=" ">
+  <div id="exTab1" class="">
     <div id="" class="sticky-top container ">
       <ul class=" nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
         style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
@@ -162,7 +156,7 @@
         Aggiorna
       </button>
     </div>
-
+    <div id="" class=" container ">
     <div class="row tab-content clearfix">
       <div class="tab-pane active" id="1a">
       </div>
@@ -171,6 +165,8 @@
       <div class="tab-pane" id="3a">
       </div>
     </div>
+  </div>
+
   </div>
 
   <!-- Tab content -->
