--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   </head>
 
-<body id="banner">
+<body id="banner" style="overflow-x:hidden">
   <script>
     // Make sure the client is loaded before calling this method.
     async function execute() {
@@ -137,7 +137,7 @@
   </script>
 
   <!-- Tab content -->
-  <div id="exTab1" class="">
+  <div id="exTab1" class="" style="margin-top:5px">
     <div id="" class="sticky-top container ">
       <ul class=" nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
         style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
