--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 <head>
   <meta charset="utf-8">
@@ -6,12 +8,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  </head>
+</head>
 
-<body id="banner" style="overflow-x:hidden">
+<body id="banner" style="overflow-x:hidden" onload="execute()">
   <script>
     // Make sure the client is loaded before calling this method.
     async function execute() {
+      document.getElementById("1a").innerHTML = '<br><br><div class="text-center"><div class="spinner-border" role="status"></div></div> '
+      document.getElementById("2a").innerHTML = '<br><br><div class="text-center"><div class="spinner-border" role="status"></div></div> '
+      document.getElementById("3a").innerHTML = '<br><br><div class="text-center"><div class="spinner-border" role="status"></div></div> '
 
       const fetchResSNS = await fetch("https://lucaleonardobologna.it/snscomments/");
       const jsonDataSNS = await fetchResSNS.json();
@@ -23,80 +28,81 @@
 
       const fetchResPGENG = await fetch("https://lucaleonardobologna.it/pgengcomments/");
       const jsonDataPGENG = await fetchResPGENG.json();
-      populate(jsonDataPGENG, "3a");
-
-
-      function populate(res, divId) {
-        let mainSnSdiv = document.getElementById(divId);
-        mainSnSdiv.innerHTML = "";
-        mainSnSdiv.scrollTop = 0;
-
-        // Handle the results here (response.result has the parsed body).
-        res["items"].forEach(element => {
-          /* container div */
-          let cdiv = document.createElement("div");
-          cdiv.classList.add("container", "border");
-
-          /* author-time row" */
-          let authorTimeRow = document.createElement("div");
-          authorTimeRow.classList.add("row", "text-wrap");
-          /* author div */
-          let authorDiv = document.createElement("div");
-          authorDiv.classList.add("col-10")
-          let author = element["snippet"]["topLevelComment"]["snippet"]["authorDisplayName"];
-          let authorImage = element["snippet"]["topLevelComment"]["snippet"]["authorProfileImageUrl"];
-          
-          authorDiv.innerHTML = "<img width=20px src='" + authorImage + "''> <strong>" + author + "</strong>";
-          /* time div */ 
-          let timeDiv = document.createElement("div");
-          timeDiv.classList.add("col-2")
-          let creationDateString = element["snippet"]["topLevelComment"]["snippet"]["updatedAt"];
-          let currentTime = new Date();
-          let creationDate = new Date(creationDateString);
-          let timeToDisplay = timeText(currentTime, creationDate);
-          timeDiv.innerHTML = timeToDisplay;
-          /* */
-          authorTimeRow.appendChild(authorDiv)
-          authorTimeRow.appendChild(timeDiv)
-          cdiv.appendChild(authorTimeRow)
-
-          /* comment row */
-          let commentRow = document.createElement("div");
-          commentRow.classList.add("row", "text-wrap");
-          commentRow.setAttribute("style", "margin-top:7px; margin-bottom:7px")
-          let commentDiv = document.createElement("div");
-          commentDiv.classList.add("col-12", "text-wrap");
-          let comment = element["snippet"]["topLevelComment"]["snippet"]["textOriginal"];
-          commentDiv.innerHTML = comment + "<br>"; 
-          commentRow.appendChild(commentDiv)
-          cdiv.appendChild(commentRow)
-
-          /* footer row */
-          let footerRow = document.createElement("div");
-          footerRow.classList.add("row", "text-wrap");
-          let footerDiv = document.createElement("div");
-          footerDiv.classList.add("col-12", "text-wrap");
-          let videoID = element["snippet"]["topLevelComment"]["snippet"]["videoId"];
-          let linkToAppPre = "intent://m.youtube.com/watch?v=";
-          let linkToAppPost = "&feature=mweb_c3_open_app&itc_campaign=mweb_c3_open_app&redirect_app_store_ios=1&app=desktop#Intent;package=com.google.android.youtube;scheme=vnd.youtube;launchFlags=268435456;end"
-          let linkToApp = linkToAppPre + videoID + linkToAppPost;
-          let linkToVideo = "<a href='https://www.youtube.com/watch?v=" + videoID + "' target=_blank><i class='bi bi-youtube'></i> url</a> - <a href='" + linkToApp + "'><i class='bi bi-youtube'></i> app</a> -  <a href='#banner'><i class='bi bi-arrow-up'></i><a>";
-          let replies = element["snippet"]["totalReplyCount"];
-          let repliesText = "<strong>Risposte:</strong> " + replies + " - " + linkToVideo
-          footerDiv.innerHTML = repliesText
-
-          footerRow.appendChild(footerDiv)
-          cdiv.appendChild(footerRow)
-
-          let titleContentDiv = document.createElement("div");
-          titleContentDiv.classList.add("col-12");
-
-          cdiv.scrollTop = 0;
-          mainSnSdiv.appendChild(cdiv);
-
-        });
-      }
+      populate(jsonDataPGENG, "3a");      
     }
+
+
+    function populate(res, divId) {
+      let mainSnSdiv = document.getElementById(divId);
+      mainSnSdiv.innerHTML = "";
+      mainSnSdiv.scrollTop = 0;
+
+      // Handle the results here (response.result has the parsed body).
+      res["items"].forEach(element => {
+        /* container div */
+        let cdiv = document.createElement("div");
+        cdiv.classList.add("container", "border");
+
+        /* author-time row" */
+        let authorTimeRow = document.createElement("div");
+        authorTimeRow.classList.add("row", "text-wrap");
+        /* author div */
+        let authorDiv = document.createElement("div");
+        authorDiv.classList.add("col-10")
+        let author = element["snippet"]["topLevelComment"]["snippet"]["authorDisplayName"];
+        let authorImage = element["snippet"]["topLevelComment"]["snippet"]["authorProfileImageUrl"];
+
+        authorDiv.innerHTML = "<img width=20px src='" + authorImage + "''> <strong>" + author + "</strong>";
+        /* time div */
+        let timeDiv = document.createElement("div");
+        timeDiv.classList.add("col-2")
+        let creationDateString = element["snippet"]["topLevelComment"]["snippet"]["updatedAt"];
+        let currentTime = new Date();
+        let creationDate = new Date(creationDateString);
+        let timeToDisplay = timeText(currentTime, creationDate);
+        timeDiv.innerHTML = timeToDisplay;
+        /* */
+        authorTimeRow.appendChild(authorDiv)
+        authorTimeRow.appendChild(timeDiv)
+        cdiv.appendChild(authorTimeRow)
+
+        /* comment row */
+        let commentRow = document.createElement("div");
+        commentRow.classList.add("row", "text-wrap");
+        commentRow.setAttribute("style", "margin-top:8px; margin-bottom:8px")
+        let commentDiv = document.createElement("div");
+        commentDiv.classList.add("col-12", "text-wrap");
+        let comment = element["snippet"]["topLevelComment"]["snippet"]["textOriginal"];
+        commentDiv.innerHTML = comment + "<br>";
+        commentRow.appendChild(commentDiv)
+        cdiv.appendChild(commentRow)
+
+        /* footer row */
+        let footerRow = document.createElement("div");
+        footerRow.classList.add("row", "text-wrap");
+        let footerDiv = document.createElement("div");
+        footerDiv.classList.add("col-12", "text-wrap");
+        let videoID = element["snippet"]["topLevelComment"]["snippet"]["videoId"];
+        let linkToAppPre = "intent://m.youtube.com/watch?v=";
+        let linkToAppPost = "&feature=mweb_c3_open_app&itc_campaign=mweb_c3_open_app&redirect_app_store_ios=1&app=desktop#Intent;package=com.google.android.youtube;scheme=vnd.youtube;launchFlags=268435456;end"
+        let linkToApp = linkToAppPre + videoID + linkToAppPost;
+        let linkToVideo = "<a href='https://www.youtube.com/watch?v=" + videoID + "' target=_blank><i class='bi bi-youtube'></i> url</a> - <a href='" + linkToApp + "'><i class='bi bi-youtube'></i> app</a> -  <a href='#banner'><i class='bi bi-arrow-up'></i><a>";
+        let replies = element["snippet"]["totalReplyCount"];
+        let repliesText = "<strong>Risposte:</strong> " + replies + " - " + linkToVideo
+        footerDiv.innerHTML = repliesText
+
+        footerRow.appendChild(footerDiv)
+        cdiv.appendChild(footerRow)
+
+        let titleContentDiv = document.createElement("div");
+        titleContentDiv.classList.add("col-12");
+
+        cdiv.scrollTop = 0;
+        mainSnSdiv.appendChild(cdiv);
+
+      });
+    }
+
 
     /* ------------ */
 
@@ -154,22 +160,22 @@
             aria-selected="false">PG Eng</button>
         </li>
       </ul>
-      <button onclick="execute()"
+      <button id="updateBtn" onclick="execute()"
         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem; margin-top:5px; margin-bottom:5px"
         type="button" class="container rounded-4 btn btn-secondary">
         Aggiorna
       </button>
     </div>
     <div id="" class=" container ">
-    <div class="row tab-content clearfix">
-      <div class="tab-pane active" id="1a">
-      </div>
-      <div class="tab-pane" id="2a">
-      </div>
-      <div class="tab-pane" id="3a">
+      <div class="row tab-content clearfix">
+        <div class="tab-pane active" id="1a">
+        </div>
+        <div class="tab-pane" id="2a">
+        </div>
+        <div class="tab-pane" id="3a">
+        </div>
       </div>
     </div>
-  </div>
 
   </div>
 
@@ -189,4 +195,5 @@
     integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
