--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 
-<body id="banner" style="overflow-x:hidden" onload="execute()">
+<body id="banner" onload="execute()">
   <script>
     // Make sure the client is loaded before calling this method.
     async function execute() {
