--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         /* footer row */
         let footerRow = document.createElement("div");
         footerRow.classList.add("row");
+        footerRow.setAttribute("style", "font-size:3vw")
         let footerDiv = document.createElement("div");
         footerDiv.classList.add("col-12", "text-wrap", "text-break");
         let videoID = element["snippet"]["topLevelComment"]["snippet"]["videoId"];
@@ -90,17 +91,17 @@
         let replies = element["snippet"]["totalReplyCount"];
 
         let answersDiv = document.createElement("div");
-        answersDiv.classList.add("col-5")
+        answersDiv.classList.add("col-4")
         let appDiv = document.createElement("div");
         appDiv.classList.add("col-3")
         let urlDiv = document.createElement("div"); 
         urlDiv.classList.add("col-3")       
         let arrowDiv = document.createElement("div");
-        arrowDiv.classList.add("col-1")
+        arrowDiv.classList.add("col-2")
         
         answersDiv.innerHTML = "<strong>Risposte:</strong> " + replies;
-        appDiv.innerHTML = "<a href='" + linkToApp + "'><i class='bi bi-youtube'></i> APP</a>"
-        urlDiv.innerHTML = "<a href='https://www.youtube.com/watch?v=" + videoID + "' target=_blank><i class='bi bi-youtube'></i> URL</a>";
+        appDiv.innerHTML = "<a href='" + linkToApp + "'><i class='bi bi-youtube'></i> App</a>"
+        urlDiv.innerHTML = "<a href='https://www.youtube.com/watch?v=" + videoID + "' target=_blank><i class='bi bi-youtube'></i> Url</a>";
         arrowDiv.innerHTML = "<a href='#banner'><i class='bi bi-arrow-up'></i><a>"
 
         footerRow.appendChild(answersDiv)
@@ -159,7 +160,7 @@
 
   <!-- Tab content -->
   <div id="exTab1" class="">
-    <div id="" class="sticky-top container" style="margin-top:5px">
+    <div id="" class="sticky-top container" style="margin-top:2px">
       <ul class=" nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
         style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
         <li class="nav-item" role="presentation">
@@ -176,7 +177,7 @@
         </li>
       </ul>
       <button id="updateBtn" onclick="execute()"
-        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem; margin-top:5px; margin-bottom:5px"
+        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem; margin-top:6px; margin-bottom:6px"
         type="button" class="container rounded-4 btn btn-secondary">
         Aggiorna
       </button>
