Changed footer fontsize

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         /* footer row */
         let footerRow = document.createElement("div");
         footerRow.classList.add("row");
-        footerRow.setAttribute("style", "font-size:3vw")
+        footerRow.setAttribute("style", "font-size:13px")
         let footerDiv = document.createElement("div");
         footerDiv.classList.add("col-12", "text-wrap", "text-break");
         let videoID = element["snippet"]["topLevelComment"]["snippet"]["videoId"];
