--- a/index-02.html
+++ b/index-02.html
@@ -50,15 +50,16 @@
         authorTimeRow.classList.add("row");
         /* author div */
         let authorDiv = document.createElement("div");
-        authorDiv.classList.add("col-9", "text-wrap", "text-break")
+        authorDiv.classList.add("col-8", "text-wrap", "text-break")
+        authorDiv.setAttribute("style", "font-size:14px")
         let author = element["snippet"]["topLevelComment"]["snippet"]["authorDisplayName"];
         let authorImage = element["snippet"]["topLevelComment"]["snippet"]["authorProfileImageUrl"];
 
-        authorDiv.innerHTML = "<img width=20px src='" + authorImage + "''> <strong>" + author + "</strong>";
+        authorDiv.innerHTML = "<img width=22px src='" + authorImage + "''> <strong>" + author + "</strong>";
         /* time div */
         let timeDiv = document.createElement("div");
-        timeDiv.classList.add("col-3")
-        timeDiv.setAttribute("style", "font-size:12px")
+        timeDiv.classList.add("col-4")
+        timeDiv.setAttribute("style", "font-size:13px")
         let creationDateString = element["snippet"]["topLevelComment"]["snippet"]["updatedAt"];
         let currentTime = new Date();
         let creationDate = new Date(creationDateString);
@@ -72,7 +73,7 @@
         /* comment row */
         let commentRow = document.createElement("div");
         commentRow.classList.add("row");
-        commentRow.setAttribute("style", "margin-top:8px; margin-bottom:10px;")
+        commentRow.setAttribute("style", "margin-top:8px; margin-bottom:12px;")
         let commentDiv = document.createElement("div");
         commentDiv.classList.add("col-12", "text-wrap", "text-break");
         let comment = element["snippet"]["topLevelComment"]["snippet"]["textOriginal"];
@@ -83,7 +84,7 @@
         /* footer row */
         let footerRow = document.createElement("div");
         footerRow.classList.add("row");
-        footerRow.setAttribute("style", "font-size:12px; background-color: #edebeb")
+        footerRow.setAttribute("style", "font-size:13px; background-color: #f1f1f1; padding-bottom:7px; padding-top:7px")
         let footerDiv = document.createElement("div");
         footerDiv.classList.add("col-12", "text-wrap", "text-break");
         let videoID = element["snippet"]["topLevelComment"]["snippet"]["videoId"];
@@ -106,7 +107,7 @@
         let arrowDiv = document.createElement("div");
         arrowDiv.classList.add("col-2")
 
-        videoDetailsDiv.innerHTML = "<strong>Video: " + videoTitle + "</strong>" + " - " + timeVideoPublished;
+        videoDetailsDiv.innerHTML = "<strong>" + videoTitle + "</strong>" + " - " + timeVideoPublished;
         answersDiv.innerHTML = "<strong>Risposte: " + replies;
             
         appDiv.innerHTML = "<a href='" + linkToApp + "'><i class='bi bi-youtube'></i> App</a>"
@@ -140,43 +141,45 @@
       let diffDays = DifferenceInTime / (1000 * 3600 * 24);
       let diffHours = diffDays * 24;
       let diffMinutes = diffHours * 60;
-      let diffYears = Math.floor(diffDays/365)
-      let diffMonths = Math.floor(diffDays/30)
+      let diffYears = diffDays/365;
+      let diffMonths = diffDays/30;
       let timeToDisplay = "";
       if (diffYears > 1){
-        if (diffYears == 1)
-          text = " anno"
+        let displayTime = Math.floor(diffYears);
+        if (displayTime == 1)
+          text = " anno fa"
         else
-          text = " anni"
-        timeToDisplay = diffYears + text 
+          text = " anni fa"
+        timeToDisplay = displayTime + text 
       }
       else if (diffMonths > 1){
-        if (diffMonths == 1)
-          text = " mese"
+        let displayTime = Math.floor(diffMonths);
+        if (displayTime == 1)
+          text = " mese fa"
         else
-          text = " mesi"
-        timeToDisplay = diffMonths + text
+          text = " mesi fa"
+        timeToDisplay = displayTime + text
       }
       else if (diffDays > 1) {
         let displayTime = Math.floor(diffDays);
         if (displayTime == 1)
-          text = " giorno"
+          text = " giorno fa"
         else
-          text = " giorni"
+          text = " giorni fa"
         timeToDisplay = displayTime + text;
       } else if (diffHours > 1) {
         let displayTime = Math.floor(diffHours);
         if (displayTime == 1)
-          text = " ora"
+          text = " ora fa"
         else
-          text = " ore"
+          text = " ore fa"
         timeToDisplay = displayTime + text;
       } else {
         let displayTime = Math.ceil(diffMinutes);
         if (displayTime == 1)
-          text = " min"
+          text = " min fa"
         else
-          text = " min"
+          text = " min fa"
         timeToDisplay = displayTime + text;
       }
       timeToDisplay = timeToDisplay;
@@ -206,8 +209,8 @@
         </li>
       </ul>
       <button id="updateBtn" onclick="execute()"
-        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem; margin-top:6px; margin-bottom:6px"
-        type="button" class="container rounded-4 btn btn-success">
+        style="background-color: white; border-color: #ffd174; border-width: 2px; --bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem; margin-top:6px; margin-bottom:6px"
+        type="button" class="container rounded-4 btn">
         Aggiorna
       </button>
     </div>
