--- a/snstranscripts.html
+++ b/snstranscripts.html
@@ -53,7 +53,7 @@
     let curationInfo = "";
 
     if (window.location.href.includes("https://lbologna.github.io")){
-      mainurl = "https://lucaleonardobologna.it"
+      mainurl = "https://lucaleonardobologna.it";
     } else if (window.location.href.includes("http://127.0.0.1:")) {
       mainurl = "http://127.0.0.1:5000";
     }
